Almost finish creation

--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -9,6 +9,7 @@
         <h4>
             Bienvenue dans l'application Winenjoy !
         </h4>
+        <img src="img/logo.svg" style="height: 5rem; width: 5rem"/>
         <p>
             Nous sommes en phase de beta-test.
         </p>
