--- a/app/pages/tasting/smell-tab.html
+++ b/app/pages/tasting/smell-tab.html
@@ -1,5 +1,10 @@
 <ion-navbar *navbar secondary>
-  <ion-title>Nouvelle dégustation</ion-title>
+  <ion-buttons start>
+    <button (click)="cancelTasting()">
+      <ion-icon name="close"></ion-icon>
+    </button>
+  </ion-buttons>
+  <ion-title>Dégustation</ion-title>
   <ion-buttons end>
     <button (click)="saveTasting()">
       <ion-icon name="checkmark"></ion-icon>
@@ -11,10 +16,13 @@
     <form #smellForm="ngForm" novalidate padding>
         <button light block (click)="selectAromas()">Sélectionner les arômes</button>
         <button class="text-light" round small *ngFor="#i of tasting.smell.aromas" (click)="deleteCriteria(i, 'aromas')">{{ i.label }}</button>
+        <ion-item></ion-item>
         <button light block style="margin-top: 16px" (click)="selectDefects()">Sélectionner les défauts</button>
         <button class="text-light" round small *ngFor="#i of tasting.smell.defects" (click)="deleteCriteria(i, 'defects')">{{ i.label }}</button>
+        <ion-item></ion-item>
         <ion-label class="label" style="margin-top: 16px">Intensité</ion-label>
         <button [class.button-outline]="!i.isSelected" [class.text-light]="i.isSelected" round small *ngFor="#i of intensities" (click)="selectCriteria(i, 'intensities')">{{ i.label }}</button>
+        <ion-item></ion-item>
         <ion-label class="label">Commentaires</ion-label>
         <ion-textarea [(ngModel)]="tasting.smell.notes" #sightNotes="ngForm"></ion-textarea>
     </form>
