--- a/app/pages/tastings/tastings.html
+++ b/app/pages/tastings/tastings.html
@@ -19,7 +19,8 @@
             </div>
         </button>
     </ion-list>
-    <button fab fab-bottom fab-right (click)="createTasting()">
-        <ion-icon light name="ios-wine"></ion-icon>
-    </button>
 </ion-content>
+
+<button fab fab-bottom fab-right (click)="createTasting()" style="z-index: 99">
+    <ion-icon light name="ios-wine"></ion-icon>
+</button>
